--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,11 @@ nav a:hover {
     width: auto;
     object-fit: contain;
 }
-
+.xsmall-image {
+    height: 25px;
+    width: auto;
+    object-fit: contain;
+}
 
 .space-small {
     margin-bottom: 25px;
